--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -3243,7 +3243,7 @@
 					<show id="bcpg:docTypeIsMandatory" />
 					<show id="bcpg:docTypeEffectivityType" />
 					<show id="bcpg:docTypeAutoExpirationDelay" force="true" />
-					<show id="bcpg:docTypeMandatoryFormula" force="true" />
+					<show id="bcpg:docTypeFormula" force="true" />
 					<show id="bcpg:docTypeNameFormat" />
 					<show id="bcpg:docTypeLinkedTypes" force="true" />
 					<show id="bcpg:docTypeLinkedHierarchy" force="true" />
@@ -3274,7 +3274,7 @@
 							<control-param name="unit">d</control-param>
 						</control>
 					</field>
-					<field id="bcpg:docTypeMandatoryFormula" set="documentType" >
+					<field id="bcpg:docTypeFormula" set="documentType" >
 						<control template="/org/alfresco/components/form/controls/spel-editor.ftl">
 							<control-param name="rows">10</control-param>
 						</control>
@@ -3372,7 +3372,7 @@
 					<show id="bcpg:docTypeIsMandatory" />
 					<show id="bcpg:docTypeEffectivityType" />
 					<show id="bcpg:docTypeAutoExpirationDelay" force="true" />
-					<show id="bcpg:docTypeMandatoryFormula" force="true" />
+					<show id="bcpg:docTypeFormula" force="true" />
 					<show id="bcpg:docTypeNameFormat" />
 					<show id="bcpg:docTypeLinkedTypes" force="true" />
 					<show id="bcpg:docTypeLinkedHierarchy" force="true" />
@@ -3403,7 +3403,7 @@
 							<control-param name="unit">d</control-param>
 						</control>
 					</field>
-					<field id="bcpg:docTypeMandatoryFormula" set="documentType" >
+					<field id="bcpg:docTypeFormula" set="documentType" >
 						<control template="/org/alfresco/components/form/controls/spel-editor.ftl">
 							<control-param name="rows">10</control-param>
 						</control>
