InProgress #28025 - [Bug] Fixing form typos

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-mpm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-mpm-form-config.xml
@@ -307,7 +307,7 @@
 			<form id="security">
 				<field-visibility>
 					<show id="bcpg:variantIds" force="true"/>
-					<show id="mpm:plStep" />->									
+					<show id="mpm:plStep" />					
 					<show id="mpm:plResource" />
 					<show id="mpm:plQtyResource" />
 					<show id="mpm:plRateResource" />
