Fix #27826 - [Feature] Fixed form typo

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -1602,7 +1602,7 @@
 				</field-visibility>
 			</form>
 			
-			<form id="datagrid">
+			<form id="export">
 				<field-visibility>
 					<show id="bcpg:charactName" />
 					<show id="bcpg:legalName" />
