Fix #28149 - [Bug] Fix score css in project list

--- a/becpg-project/becpg-project-share/src/main/assembly/web/components/project/project-list.css
+++ b/becpg-project/becpg-project-share/src/main/assembly/web/components/project/project-list.css
@@ -404,6 +404,11 @@
 	font-weight: bold;
 }
 
+
+.datagrid span[class^="score-"]::before {
+  content: unset;
+}
+
 .project-list .nc {
 	padding-bottom: 2px;
 	padding-top: 2px;
