Fix#28283 - [Bug] Fix revert action

--- a/becpg-share/src/main/assembly/web/modules/entity-version/versions-graph.css
+++ b/becpg-share/src/main/assembly/web/modules/entity-version/versions-graph.css
@@ -14,6 +14,10 @@
     visibility: inherit;
 }
 
+.loading-cursor * {
+  cursor: wait !important;
+}
+
 
 .versions-graph div.graph-nodes {
     position: absolute;
