--- a/becpg-share/src/main/assembly/web/components/documentlibrary/custom-documentlist.css
+++ b/becpg-share/src/main/assembly/web/components/documentlibrary/custom-documentlist.css
@@ -73,6 +73,11 @@ div.entityFolderInstructions {
     color: red;
 }
 
+.detail .effectivity-mandatory {
+    color: red;
+    font-weight: bold;
+}
+
 .detail .effectivity-future {
     color: green;
 }
