--- a/becpg-share/src/main/assembly/web/components/documentlibrary/custom-documentlist.css
+++ b/becpg-share/src/main/assembly/web/components/documentlibrary/custom-documentlist.css
@@ -69,6 +69,14 @@ div.entityFolderInstructions {
 	background-image: url(../basket/images/basket-selected_16x16.png);
 }
 
+.item-social a.ai-suggestion-action {
+	background-image: url(../documentlibrary/indicators/ai-valid-16.png);
+}
+
+.item-social a.ai-suggestion-action.disabled {
+	opacity: 0.5;
+}
+
 .detail .effectivity-past {
     color: red;
 }
