Fix #24826 - [Feature] Add suggestion panel on documents

--- a/becpg-share/src/main/assembly/web/components/documentlibrary/custom-documentlist.css
+++ b/becpg-share/src/main/assembly/web/components/documentlibrary/custom-documentlist.css
@@ -69,12 +69,12 @@ div.entityFolderInstructions {
 	background-image: url(../basket/images/basket-selected_16x16.png);
 }
 
-.item-social a.ai-suggestion-action {
-	background-image: url(../documentlibrary/indicators/ai-valid-16.png);
+.item-social a.ai-suggestion-action.enabled {
+	background-image: url(../entity-suggestions/images/chef-ai-enabled-16.png);
 }
 
-.item-social a.ai-suggestion-action.disabled {
-	opacity: 0.5;
+.item-social a.ai-suggestion-action {
+	background-image: url(../entity-suggestions/images/chef-ai-16.png);
 }
 
 .detail .effectivity-past {
