--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -3355,20 +3355,27 @@
 					</field>
 					<field id="bcpg:docTypeLinkedCharacts" set="documentTypeAutogeneration" >
 						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
-							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:charact</control-param>
+							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:entityListItem?classNames=bcpg:certification,bcpg:labelClaim,survey:surveyQuestion
+							</control-param>
 							<control-param name="showTooltip">false</control-param>
 							<control-param name="saveTitle">false</control-param>
 						</control>
 					</field>
 					<field id="bcpg:docTypeDestPath" set="documentTypeAutogeneration" />
 					 <field id="bcpg:aiValidationCriteria" set="ai" >
-                        <control template="/org/alfresco/components/form/controls/textarea.ftl" />
+                       <control template="/org/alfresco/components/form/controls/textarea.ftl" >
+                        	<control-param name="rows">10</control-param>
+                        </control>
                     </field>
-                    <field id="bcpg:aiSuggestedFields" set="ai" >
-                        <control template="/org/alfresco/components/form/controls/textarea.ftl" />
-                    </field>
+                   <field id="bcpg:aiSuggestedFields" set="ai" >
+                        <control template="/org/alfresco/components/form/controls/textarea.ftl" >
+                        	<control-param name="rows">4</control-param>
+                        </control>
+					</field>
                     <field id="bcpg:aiExtraPrompt" set="ai" >
-                        <control template="/org/alfresco/components/form/controls/textarea.ftl" />
+                        <control template="/org/alfresco/components/form/controls/textarea.ftl" >
+                        	<control-param name="rows">4</control-param>
+                        </control>
                     </field>
                     
 					
@@ -3500,7 +3507,8 @@
 					</field>
 					<field id="bcpg:docTypeLinkedCharacts" set="documentTypeAutogeneration" >
 						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
-							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:charact</control-param>
+							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:entityListItem?classNames=bcpg:certification,bcpg:labelClaim,survey:surveyQuestion
+							</control-param>
 							<control-param name="showTooltip">false</control-param>
 							<control-param name="saveTitle">false</control-param>
 						</control>
@@ -3508,13 +3516,19 @@
 					<field id="bcpg:docTypeDestPath" set="documentTypeAutogeneration" />
 					
 					 <field id="bcpg:aiValidationCriteria" set="ai" >
-                        <control template="/org/alfresco/components/form/controls/textarea.ftl" />
+                        <control template="/org/alfresco/components/form/controls/textarea.ftl" >
+                        	<control-param name="rows">10</control-param>
+                        </control>
                     </field>
                     <field id="bcpg:aiSuggestedFields" set="ai" >
-                        <control template="/org/alfresco/components/form/controls/textarea.ftl" />
-                    </field>
+                        <control template="/org/alfresco/components/form/controls/textarea.ftl" >
+                        	<control-param name="rows">4</control-param>
+                        </control>
+					</field>
                     <field id="bcpg:aiExtraPrompt" set="ai" >
-                        <control template="/org/alfresco/components/form/controls/textarea.ftl" />
+                        <control template="/org/alfresco/components/form/controls/textarea.ftl" >
+                        	<control-param name="rows">4</control-param>
+                        </control>
                     </field>
 					
 					
@@ -11246,7 +11260,7 @@
 						template="/org/alfresco/components/form/2-column-set.ftl" />
 						
 					<field id="bcpg:documentState" set="documentType" />
-					<field id="bcpg:documentIsMandatory" set="documentType" />
+					<field id="bcpg:documentIsMandatory" set="documentType" read-only="true" />
 					<field id="bcpg:documentTypeRef" set="documentType" >
 						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
 							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:documentType
@@ -11254,7 +11268,7 @@
 							<control-param name="showLink">false</control-param>
 						</control>
 					</field>
-					<field id="bcpg:documentEntityRef" set="documentType" >
+					<field id="bcpg:documentEntityRef" set="documentType" read-only="true" >
 						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
 							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:entityV2
 							</control-param>
@@ -11269,18 +11283,20 @@
 		<forms>
 			<form>
 				<field-visibility>
-					<show id="bcpg:aiValidationState" read="true"/>
-					<show id="bcpg:aiValidationHints"  read="true" />
-					<show id="bcpg:aiValidationDate"  read="true" />
+					<show id="bcpg:aiValidationState" for-mode="view" />
+					<show id="bcpg:aiValidationHints" for-mode="view" />
+					<show id="bcpg:aiValidationDate" for-mode="view" />
 				</field-visibility>
 				<appearance>
 					<set id="aiValidation" appearance="bordered-panel" label-id="becpg.forms.set.ai-validation.label"
 						template="/org/alfresco/components/form/2-column-set.ftl" />
-					<field id="bcpg:aiValidationState" set="aiValidation" />
-					<field id="bcpg:aiValidationHints" set="aiValidation" >
-						<control template="/org/alfresco/components/form/controls/textarea.ftl" />
-					</field>
-					<field id="bcpg:aiValidationDate" set="aiValidation" />
+					<field id="bcpg:aiValidationState" set="aiValidation" read-only="true" />
+					<field id="bcpg:aiValidationHints" set="aiValidation" read-only="true" >
+                        <control template="/org/alfresco/components/form/controls/textarea.ftl" >
+                        	<control-param name="rows">10</control-param>
+                        </control>
+                    </field>
+					<field id="bcpg:aiValidationDate" set="aiValidation" read-only="true" />
 				</appearance>
 			</form>
 		</forms>
@@ -11295,16 +11311,21 @@
 					<show id="bcpg:aiExtraPrompt" />
 				</field-visibility>
 				<appearance>
-					<set id="ai" appearance="bordered-panel" label-id="becpg.forms.set.ai.label"
-						template="/org/alfresco/components/form/2-column-set.ftl" />
+					<set id="ai" appearance="bordered-panel" label-id="becpg.forms.set.ai.label" />
 					<field id="bcpg:aiValidationCriteria" set="ai" >
-						<control template="/org/alfresco/components/form/controls/textarea.ftl" />
-					</field>
+                        <control template="/org/alfresco/components/form/controls/textarea.ftl" >
+                        	<control-param name="rows">10</control-param>
+                        </control>
+                    </field>
 					<field id="bcpg:aiSuggestedFields" set="ai" >
-						<control template="/org/alfresco/components/form/controls/textarea.ftl" />
+                        <control template="/org/alfresco/components/form/controls/textarea.ftl" >
+                        	<control-param name="rows">4</control-param>
+                        </control>
 					</field>
 					<field id="bcpg:aiExtraPrompt" set="ai" >
-						<control template="/org/alfresco/components/form/controls/textarea.ftl" />
+                        <control template="/org/alfresco/components/form/controls/textarea.ftl" >
+                        	<control-param name="rows">4</control-param>
+                        </control>
 					</field>
 				</appearance>
 			</form>
